# stripe-datev-exporter

./: .editorconfig  .env.example  .gitignore  LICENSE  Readme.md  config.example.toml  pyproject.toml  requirements.txt  setup.py  stripe-datev-cli.py
stripe_datev/: __init__.py  balance.py  charges.py  config.py  csv.py  customer.py  dateparser.py  invoices.py  output.py  payouts.py  recognition.py  transfers.py
tests/: test_recognition.py
