[project]
name = "stripe-datev-exporter"
version = "0.0.1"
description = "Stripe DATEV Exporter"
authors = [{ email = "mail@jonaswitt.com", name = "Jonas Witt" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autopep8==2.0.4",
    "datedelta==1.2",
    "python-dotenv==0.19.2",
    "pytz==2018.9",
    "requests==2.32.3",
    "stripe==12.0.1",
    "tomli==2.0.1",
    "urllib3==2.4.0",
]
